# Axioma_robot

./: README.md
documentacion/modelo-matematico/: modelo-axioma.excalidraw
src/: README.md
src/axioma_bringup/: package.xml  setup.py
src/axioma_bringup/launch/: navigation_bringup.launch.py  slam_bringup.launch.py  test_simple.launch.py
src/axioma_description/: CMakeLists.txt  package.xml
src/axioma_description/env-hooks/: axioma_description.sh.in
src/axioma_description/launch/: display.launch.py
src/axioma_description/models/axioma_v2/: model.config  model.sdf
src/axioma_description/rviz/: display.rviz  navigation.yaml.rviz  slam-toolbox.yaml.rviz
src/axioma_description/urdf/: axioma.urdf
src/axioma_description/worlds/: empty.world  empty.world.backup
src/axioma_gazebo/: CMakeLists.txt  package.xml
src/axioma_gazebo/launch/: complete_simulation.launch.py  gazebo.launch.py  teleop.launch.py
src/axioma_navigation/: CMakeLists.txt  package.xml
src/axioma_navigation/config/: nav2_params.yaml  slam_params.yaml
src/axioma_navigation/launch/: navigation.launch.py  slam.launch.py
src/axioma_navigation/maps/: .gitkeep  README_MAPAS.md  SlamToolboxSimulation.yaml  mapa.pgm  mapa.yaml
