<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>axioma_bringup</name>
  <version>1.0.0</version>
  <description>Bringup launch files for Axioma robot navigation and SLAM</description>
  <maintainer email="davidalvarez33@gmail.com">axioma</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <exec_depend>axioma_gazebo</exec_depend>
  <exec_depend>axioma_navigation</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
